src/main.css
:root {
  /* dogsalt_ official color pallate */
  --ds_dark_purple: #41344D;
  --ds_light_purple: #8258A0;
  --ds_brown_purple: #94676A;
  --ds_dark_blue: #22515B;
  --ds_light_blue: #5F93C5;
  --ds_dark_green: #2F6848;
  --ds_green_blue: #3C9A75;
  --ds_green_grey: #768F79;
  --ds_dark_red: #6B1E16;
  --ds_light_red: #DD3322;
  --ds_red_brown: #A76D62;
  --ds_dark_brown: #544617;
  --ds_light_brown: #774707;
  --ds_brown_grey: #908071;
  --ds_dark_tan: #BF895A;
  --ds_light_tan: #F7D9B7;
  --ds_black: #000000;
}

body {
  font-family: monospace;
  font-size: 1rem;
  background-color: #000000;
  color: #ffffff
}

.line_divider {
  height: 0.65rem;
  width: 100%;
  background-color: #ffffff;
  border-radius: 10%;
}

.text_divider {
  display: flex;
  justify-content: center;
  height: 0.65rem;
  width: 100%;
  padding: 1rem;
}

/* Universal Styles */
.flex_column {
  display: flex;
  flex-direction: column;
}

.flex_row {
  display: flex;
  flex-direction: row;
}

.flex_row_reverse {
  display: flex;
  flex-direction: row-reverse;
}

/* Specific Styles */
.title_section {
  background-color: #000000;
  position: fixed;
  top: 0px;
  height: auto;
  width: 100%;
  justify-content: center;
  align-items: center;
  padding-bottom: 1rem;
}

.title_top {
  justify-content: space-between;
  width: 100%;
}

.title_icon {
  background-image: url('./assets/dogsalt_skull_hover.gif');
  background-size: contain;
  background-repeat: no-repeat;
  height: 200px;
  width: 200px;
  border: none;
  background-color: transparent;
  margin-top: 0.75rem;
}

.title_content {
  height: auto;
  justify-content: center;
  align-items: center;
}

.title_buttons {
  margin: 1rem 1.5rem 0 0;
  justify-content: center;
  align-items: center;
}


.searchbar_button {
  background-image: url('./assets/navbuttons_assets/searchbar_icon/bone_magnihover.gif');
  background-size: contain;
  background-repeat: no-repeat;
  height: 120px;
  width: 120px;
  border: none;
  background-color: transparent;
}

.navbar_button {
  background-image: url('./assets/navbuttons_assets/navbar_icon/3bonemenuhover_icon.gif');
  background-size: contain;
  background-repeat: no-repeat;
  height: 120px;
  width: 120px;
  border: none;
  background-color: transparent;
}

/* Title Bottom Section Styles */

.navbar_container ul {
  display: flex;
  flex-direction: row;
  gap: 4rem;
  align-items: center;
  list-style: none;
}

.searchbar_container form {
  display: flex;
  gap: 0.5rem;
  margin: 1rem;
}

